--- a/zhanyyindex.html
+++ b/zhanyyindex.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>爱情占有欲测试（RIP）</title>
+    <title>爱情占有欲测试（RPI）</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -774,7 +774,7 @@
             <div class="heart-icon">
                 <i class="fas fa-heart"></i>
             </div>
-            <div class="rip-badge">爱情占有欲测试（RIP）</div>
+            <div class="rip-badge">爱情占有欲测试（RPI）</div>
             <h1>了解你的爱情边界</h1>
             <div class="disclaimer">
                 温馨提示：本测试为娱乐性质，结果仅供参考，请勿过度解读
